fix: add spacing to buttons in irc settings fix: add background colour around sidebar buttons

--- a/src/app/components/irc/irc.component.scss
+++ b/src/app/components/irc/irc.component.scss
@@ -524,6 +524,8 @@ $hyperlink-background-color: #2b4576;
 									display: flex;
 									flex-direction: row;
 
+									margin-left: 4px;
+
 									button {
 										box-sizing: border-box;
 										margin-right: 4px;
